# HDU_Phoenix

./: CMakeLists.txt  README.en.md  README.md  main.cpp  main1.cpp  main2.cpp  my_video3.avi
Armor/Inc/: ArmorDector.h
Armor/Src/: ArmorDector.cpp
Buff/Inc/: Buff.h
Camera/: CMakeLists.txt  camera.cpp  camera.h  readme.md  test.cpp  tool.h
Camera/doc/: Machine Vision Camera SDK Programming Manual-EN.chm
Camera/util/: cv_toolbox.h
General/Inc/: General.h  opencv_extend.h
General/Src/: opencv_extend.cpp
Serials/: serial.cpp
angleSolve/Inc/: PNPSolver.h
angleSolve/Src/: PNPSolver.cpp
armor/Inc/: ArmorDector.h
armor/Src/: ArmorDector.cpp
buff/Inc/: Buff.h  Timestamp.h
buff/Src/: Buff.cpp
camera/Inc/: camera.h  camera_wrapper.h
camera/Src/: camera.cpp  camera_wrapper.cpp
camera/doc/: Machine Vision Camera SDK Programming Manual-CH.chm
logs/: RM_CV.ERROR  RM_CV.INFO  RM_CV.WARNING  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200714-025322.6469  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200714-034307.15926  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-035953.2656  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-040335.3130  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-040527.3148  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-040544.3157  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-040654.3219  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-040709.3279  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200715-040903.3329  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200721-064056.2135  RM_CV.nuc-NUC8i7BEH.nuc.log.INFO.20200723-024433.3793  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200714-025322.6469  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200714-034307.15926  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-035953.2656  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-040335.3130  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-040527.3148  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-040544.3157  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-040654.3219  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-040709.3279  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200715-040903.3329  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200721-064056.2135  RM_CV.nuc-NUC8i7BEH.nuc.log.WARNING.20200723-024433.3793  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200113-234643.4370  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200113-234943.4459  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200113-235617.5073  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200113-235750.5228  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200113-235821.5306  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-000106.5401  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-000213.5499  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-000903.5932  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-000953.6010  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-001043.6074  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-001101.6116  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-001120.6140  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-001200.6188  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-001207.6216  RM_CV.nuc-NUC8i7BEH.root.log.ERROR.20200114-001211.6236  (+1197 more)
main/Inc/: ImgProdCons.h  img_buffer.h
main/Src/: ImgProdCons.cpp  img_buffer.cpp
offsetSolve/Inc/: offsetSolve.h
offsetSolve/Src/: offsetSolve.cpp
pnpSolve/Inc/: PNPSolver.h
pnpSolve/Src/: PNPSolver.cpp
serials/Inc/: serial.h
serials/Src/: serial.cpp
utilities/Inc/: general.h  log.h  opencv_extend.h
utilities/Src/: opencv_extend.cpp
(+2 files in other folders)
